src/objects/DMAPP__DM_AM_Political_Map_Contact__c.object
<CustomObject>
    <description>DEPRECATED - DO NOT USE</description>
    <fields>
        <fullName>DMAPP__Adaptability__c</fullName>
        <label>Adaptability</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laggard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pragmatist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Always_On_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always On Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>AM_Political_Map_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Coverage__c</fullName>
        <label>Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brief contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-depth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Decision_Orientation__c</fullName>
        <label>Decision Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Key_Player__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Player</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Note__c</fullName>
        <label>Note</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Unit__c</fullName>
        <label>Plan Unit</label>
        <referenceTo>DMAPP__AM_Plan_Unit__c</referenceTo>
        <relationshipName>AM_Political_Map_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Political__c</fullName>
        <label>Political Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Political Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inner Circle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Possible_Reports_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Possible Reports To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>AM_Political_Map_Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status__c</fullName>
        <label>Your Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategy__c</fullName>
        <formula>&apos;XXX&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goto User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AM_Political_Map_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ZZ AM Political Map Contact</label>
    <nameField>
        <label>AM Political Map Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AM Political Map Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>